objects/CN_Approval_Aging_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>CN_Approval_Aging_Setting_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Approval_Aging_Setting_Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Approval_Aging_Setting_Step__c</fullName>
        <label>Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Aging Setting</label>
    <pluralLabel>Approval Aging Settings</pluralLabel>
</CustomObject>